[tool.poetry]
name = "deeplearning"
version = "0.1.0"
description = ""
authors = ["KokiKono <kono.koki.pg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
jupyterlab = "^4.0.5"
jupyterlab-code-formatter = "^2.2.1"
black = "^23.7.0"
isort = "^5.12.0"
jupyter = "^1.0.0"
matplotlib = "^3.7.2"
numpy = "^1.25.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
